<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="STRUCT_PackML" Id="{b9900557-ff8f-40e2-a8ca-49217c127049}">
    <Declaration><![CDATA[TYPE STRUCT_PackML :
STRUCT
	State 			: E_State_PackML;
   	Abort 			: BOOL;
	Aborting_SC 	: BOOL;
	Clear 			: BOOL;
	Clearing_SC 	: BOOL;
	Execute_SC 		: BOOL;
	Completing_SC	: BOOL;
	Hold 			: BOOL;
	Holding_SC 		: BOOL;
	Reset 			: BOOL;
	Resetting_SC 	: BOOL;
	Start 			: BOOL;
	Starting_SC 	: BOOL;
	Stop 			: BOOL;
	Stopping_SC 	: BOOL;
	Suspend 		: BOOL;
	Suspending_SC 	: BOOL;
	Unhold 			: BOOL;
	Unholding_SC 	: BOOL;
	Unsuspend 		: BOOL;
	Unsuspending_SC : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>